deployment.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      app: hello-world
    name: hello-world
  spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    selector:
      app: hello-world
  status:
    loadBalancer: {}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    creationTimestamp: null
    labels:
      app: hello-world
    name: hello-world
  spec:
    selector:
      matchLabels:
        app: hello-world
    replicas: 1
    strategy: {}
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: hello-world
      spec:
        containers:
        - image: grinny/hello-world:latest
          name: hello-world
          ports:
          - name: http
            containerPort: 8081
            protocol: TCP
          imagePullPolicy: Always
          resources: {}
        restartPolicy: Always
  status: {}
kind: List
metadata: {}
